# smurf-streamer

./: .gitignore  CMakeLists.txt  DataWriter.cpp  Dockerfile  Makefile  README.md  StreamListener.py  Untitled.ipynb  config.txt  docker-compose.yml  lo_pass.c  lo_pass.h  meta_registers.yaml  plotPhases.ipynb  run.py  setup.sh  smurf.cfg  testMyModule.py  test_fs.c
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
base/: run.sh
docker/spt3g-pysmurf-server-base/: Dockerfile
fw/fw_5ecec57_v4/BACKUP/AmcCarrierCore/AppTop/: AppTop.py  TopLevel.py  __init__.py
fw/fw_5ecec57_v4/BACKUP/AmcCarrierCore/DacSigGen/: DacSigGen.py
fw/fw_5ecec57_v4/BACKUP/config/: defaults.yml
fw/fw_5ecec57_v4/BACKUP/pyrogue/DELETE/old/AmcCarrierCore/: AmcCarrierCore.py
fw/fw_5ecec57_v4/BACKUP/pyrogue/DELETE/old/AppTop/: TopLevel.py
fw/fw_5ecec57_v4/BACKUP/pyrogue/DELETE/python-works/AmcCarrierCore/AppMps/: AppMps.py
fw/fw_5ecec57_v4/BACKUP/pyrogue/DELETE/python-works/AmcCarrierCore/AppTop/: AppTop.py  TopLevel.py  __init__.py
fw/fw_5ecec57_v4/BACKUP/pyrogue/DELETE/python-works/FpgaTopLevel/: FpgaTopLevel.py
fw/fw_5ecec57_v4/BACKUP/pyrogue/Kcu105Eth-0x00000101-20190805161102-ruckman-5ecec57.python/: build.info  debug_nets.ltx
fw/fw_5ecec57_v4/BACKUP/pyrogue/Kcu105Eth-0x00000101-20190805161102-ruckman-5ecec57.python/python/AmcCarrierCore/: __init__.py
fw/fw_5ecec57_v4/BACKUP/pyrogue/Kcu105Eth-0x00000101-20190805161102-ruckman-5ecec57.python/python/AmcCarrierCore/AppTop/: SysReg.py
fw/fw_5ecec57_v4/BACKUP/pyrogue/Kcu105Eth-0x00000101-20190805161102-ruckman-5ecec57.python/python/DevBoard/: Kcu105Eth.py
fw/fw_5ecec57_v4/BACKUP/pyrogue/Kcu105Eth-0x00000101-20190805161102-ruckman-5ecec57.python/python/surf/axi/: _AxiStreamMonitoring.py
fw/fw_5ecec57_v4/ws/python/surf/xilinx/: _AxiSysMonUltraScale.py
fw/pyrogue/Kcu105Eth-0x00000001-20181108083817-mdewart-0d3fa970.python/: build.info
include/: DoubleQueue.h  SmurfBuilder.h  SmurfSample.h  SmurfStreamer.h  SmurfTransmitter.h  StreamConfig.h  smurf_streamer_numpy_init.h
python/sosmurf/: SessionManager.py  __init__.py  util.py
python/sosmurf/SOFileWriter/: _SOFileWriter.py  __init__.py
python/sosmurf/SmurfStreamer/: _SmurfStreamer.py  __init__.py
python/sosmurf/SmurfTransmitter/: _SmurfTransmitter.py  __init__.py
python/sosmurf/StreamBase/: _StreamBase.py  __init__.py
scripts/: ._install_G3StreamWriter.sh  emulate.py  install_spt3g.sh  set_stream  setup_server.sh  start_stream.py  stream.py  stream_devboard.py  stream_pcie.py  test_c lient.py  test_client.py  test_emulator.py  test_new_transmit.py
scripts/control-server/: start_server.sh
scripts/control-server/python/: pyrogue_server.py
src/: G3StreamWriter.cpp  G3StreamWriter.h  SampleData.cpp  SampleData.h  SmurfBuilder.cpp  SmurfSample.cpp  SmurfStreamer.cpp  SmurfTransmitter.cpp  StreamConfig.h  lo_pass.c  python.cpp
